# Mini-Infer

./: .gitignore  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  demo.py  environment.yml  pyproject.toml  quick_chat.py  serve.py
.github/workflows/: lint.yml  smoke.yml
benchmarks/: analyze_kv_trace.py  benchmark_chunked_prefill.py  benchmark_cuda_graph.py  benchmark_flash.py  benchmark_flash_decode.py  benchmark_hf.py  benchmark_http_streaming.py  benchmark_mini.py  benchmark_mla.py  benchmark_moe.py  benchmark_multi_gpu.py  benchmark_pd_disagg.py  benchmark_preemption.py  benchmark_prefix_cache.py  benchmark_quant.py  benchmark_scheduler_counters.py  benchmark_scheduler_trace.py  benchmark_server.py  benchmark_spec.py  benchmark_tp.py  benchmark_triton.py  profile_decode.py
benchmarks/results/: chunked_prefill.json  cuda_graph.json  flash_decode.json  moe_ep_evolution.json  server_benchmark.json  throughput_evolution.json  w8a8_quant.json
docs/: architecture.md  benchmarks.md  faq.md  observability_plan.md  phases.md  reproduce_readme_results.md  roadmap.md  scheduler_policy_plan.md
examples/: local_chat.py  openai_client.py
mini_infer/: __init__.py
mini_infer/cache/: __init__.py  kv_cache.py  kv_transfer.py
mini_infer/cli/: __init__.py  chat.py  demo.py  serve.py
mini_infer/clients/: __init__.py  chat_client.py
mini_infer/core/: __init__.py  config.py  request.py
mini_infer/kernels/: __init__.py  attention.py  triton_attn.py  triton_flash_decode.py
mini_infer/modeling/: __init__.py  mla_attention.py  model_runner.py  quantization.py
mini_infer/parallel/: __init__.py  pp_engine.py  replica_engine.py  tp_engine.py  tp_model_runner.py
mini_infer/runtime/: __init__.py  async_engine.py  engine.py  pd_engine.py  pd_worker.py  scheduler.py  spec_engine.py
mini_infer/serving/: __init__.py  openai_schema.py  server.py
scripts/: gen_charts.py
tests/: test_async_engine.py  test_benchmark_moe.py  test_benchmark_quant.py  test_chat_entrypoints.py  test_chunked_prefill.py  test_cuda_graph.py  test_engine.py  test_flash_decode.py  test_http_streaming_benchmark.py  test_kv_cache.py  test_mla_attention.py  test_model_runner_quant.py  test_moe.py  test_paged_attention.py  test_pd_disagg.py  test_preemption.py  test_prefix_cache.py  test_quantization.py  test_replica_engine.py  test_scheduler.py  test_server.py  test_smoke.py  test_spec_engine.py  test_tp_engine.py  test_trace_analyzer.py  test_triton_attn.py
